# openclaw-testing-platform

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT_GUIDE.md  README.md  docker-compose.yml  next.config.js  package.json  pipeline-config.json  plan.md  pnpm-lock.yaml  reports-md  results  ruvector.db  start.sh  tsconfig.json  vitest.config.js  vitest.config.ts
agents/: architecture-expert.md  business-expert.md
app/: globals.css  layout.jsx  layout.tsx  page.tsx
components/: app-log-tab.jsx  app-log-tab.tsx  bridge-panel.jsx  bridge-panel.tsx  consensus-view.jsx  direct-ai-tab.jsx  direct-ai-tab.tsx  drift-monitor.jsx  error-boundary.jsx  error-boundary.tsx  event-log.jsx  event-log.tsx  header.tsx  knowledge-graph-content.jsx  knowledge-graph-tab.jsx  knowledge-graph-tab.tsx  knowledge-graph-view.jsx  model-selector.jsx  model-selector.tsx  orchestrator-tab.jsx  orchestrator-tab.tsx  pipeline-bar.jsx  pipeline-bar.tsx  pipeline-builder.jsx  pipeline-builder.tsx  pipeline-editor.jsx  pipeline-editor.tsx  progress-bar.jsx  progress-bar.tsx  recording-player.jsx  recording-player.tsx  rl-insights.jsx  ruflo-panel.jsx  semantic-search.jsx  session-browser.jsx  session-browser.tsx  session-manager-tab.jsx  session-manager-tab.tsx  session-monitor.jsx  session-monitor.tsx  (+18 more)
config/: active-project.json
context/: dashboard-context.jsx  dashboard-context.tsx  dashboard-reducer.js  dashboard-reducer.ts  (+3 more)
services/audit-service/: Cargo.toml  Dockerfile
services/audit-service/src/: config.rs  event.rs  hash_chain.rs  main.rs  persistence.rs  routes.rs  store.rs
(+305 files in other folders)
